--- a/src/components/DiscreteSlider/DiscreteSlider.scss
+++ b/src/components/DiscreteSlider/DiscreteSlider.scss
@@ -1,3 +1,5 @@
+@import '../../Utils/mixins.scss';
+
 .slider-container {
     position: relative;
     width: 100%;
@@ -28,17 +30,10 @@
         }
 
         &::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            appearance: none;
-            pointer-events: all;
-            background-image: radial-gradient(circle, #34ad38 40%, #f7f7f7 45%);
-            border-radius: 50%;
-            cursor: pointer;
-            position: relative;
+            @include slider-thumb;
 
             &:active {
-                background-image: radial-gradient(circle, #34ad38 40%, #f7f7f7 40%);
-                border: 1px solid #34ad38;
+                @include slider-thumb-active;
             }
         }
 
